test/error/RealConst3.mod
MODULE RealConst3;

 CONST R = 1.E308; S* = R / 0.1;

 PROCEDURE Go*; END Go;

END RealConst3.
